<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="viewmodel"
            type="ru.fluffydreams.cardography.ui.cards.edit.EditCardViewModel"/>
    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        tools:layout=".ui.cards.edit.EditCardFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardFrontTitleLayout"
            android:hint="@string/hint_front_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardFrontTitle"
                android:text="@={viewmodel.cardFrontTitle.field}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardBackTitleLayout"
            android:hint="@string/hint_back_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardBackTitle"
                android:text="@={viewmodel.cardBackTitle.field}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonSave"
            style="@style/CircularProgressButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:text="@string/button_save"
            android:onClick="@{() -> viewmodel.save()}"
            />

    </LinearLayout>
</layout>